# simulations

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/superpowers/plans/: 2026-04-14-css-tooltips.md
notebooks/: ball_collisions.py  casino_comparison.py  double_pendulum.py  evolution_exploration.py  ising_exploration.py  logistic_population_growth.py  n_pendulum.py  planetary_gravity.py  sir_epidemic.py
pages/: back_link.html  index.html
src/simulations/biology/sir/: model.py  params.py
src/simulations/casino/blackjack/: game.py  params.py
src/simulations/casino/roulette/: game.py  params.py
src/simulations/casino/slots/: game.py  params.py
src/simulations/core/: base.py  params.py  results.py
src/simulations/evolution/genetics/: params.py  population.py
src/simulations/evolution/logistic/: params.py  population.py
src/simulations/physics/collisions/: params.py  widget.py
src/simulations/physics/gravity/: params.py  widget.py
src/simulations/physics/ising/: model.py  params.py
tests/biology/: test_sir.py
tests/casino/: test_blackjack.py  test_roulette.py  test_slots.py
tests/evolution/: test_genetics.py  test_logistic.py
tests/physics/: test_collisions.py  test_gravity_params.py  test_ising.py  test_n_body_reference.py  test_n_pendulum_reference.py  test_pendulum.py
tests_js/: n_body.test.mjs  n_pendulum.test.mjs
tests_js/reference/: gold_trajectory_2body.json  gold_trajectory_n2.json  gold_trajectory_n3.json  gold_trajectory_solar.json  n_body_reference.py  n_pendulum_reference.py
(+7 files in other folders)
